php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #27731 @ and error_reporing
Submitted: 2004-03-27 09:59 UTC Modified: 2004-03-28 19:43 UTC
From: se at ksu dot ru Assigned:
Status: Closed Package: Unknown/Other Function
PHP Version: 4.3.4 OS: Windows
Private report: No CVE-ID: None
 [2004-03-27 09:59 UTC] se at ksu dot ru
Description:
------------
Try to execute:

	error_reporting(E_ALL ^ E_NOTICE);
	if (!$a++) @include __FILE__; else error_reporting(0);

	var_dump(error_reporting());

Then remove '@' and try once again. Compare results. I think it is bug.

Reproduce code:
---------------
error_reporting(E_ALL ^ E_NOTICE);
if (!$a++) @include __FILE__; else error_reporting(0);
var_dump(error_reporting());

Expected result:
----------------
int(0) int(0) 

Actual result:
--------------
int(0) int(2039) 

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-03-28 19:43 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.

 
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 18:00:01 2026 UTC