Fixed bug #27731 (error_reporting() inside @ block fails to set error_reporting level).